[workspace]
members = ["common", "day*"]
resolver = "2"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
match_same_arms = "allow"
cast_lossless = "allow"
unused_self = "allow"
similar_names = "allow"
enum_glob_use = "allow"
must_use_candidate = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
collapsible_if = "allow"
new_without_default = "allow"
module_name_repetitions = "allow"
missing_const_for_fn = "allow"
cast_possible_truncation = "allow" # Intentional, but may be possible to mitigate.
verbose_bit_mask = "allow"         # As per the docs, LLVM may not be able to generate better code.
cast_possible_wrap = "allow"
unreadable_literal = "allow"
option_if_let_else = "allow" # This one is annoying and less readable.

[workspace.dependencies.common]
path = "./common"

[workspace.dependencies]
colored = "2.1.0"
itertools = "0.12.0"
num = "0.4.1"
pathfinding = "4.8.0"
regex = "1.10.2"
